WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44335
[Qt] WebKit does not compile with --3d-canvas
https://bugs.webkit.org/show_bug.cgi?id=44335
Summary
[Qt] WebKit does not compile with --3d-canvas
Jarkko Sakkinen
Reported
2010-08-20 07:27:37 PDT
Because of changes to some headers that are above Qt graphics backend GraphicsLayerQt.h/cpp refuse to compile. They are unable to find GraphicsContext3D.
Attachments
Proposed patch
(17.54 KB, patch)
2010-08-20 15:41 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jarkko Sakkinen
Comment 1
2010-08-20 08:04:29 PDT
What's this PlatformGLObject thing in GraphicsContext3DQt.cpp? I did find -name *.h|xargs grep -i platformglo and also same for *.cpp. Only file that contains the usage of PlatformGLObject is GraphicsContext3DQt.cpp.
Jarkko Sakkinen
Comment 2
2010-08-20 08:08:13 PDT
git blame told me that it is the commit bd0e060f. Hi James! Can you please elaborate what's all about so I can fix these compilation issues in correct way :)
James Robinson
Comment 3
2010-08-20 09:25:37 PDT
It (GC3DQt.cpp) didn't compile before that commit either. I think PlatformGLObject should be Platform3DObject, but there are other compilation issues in GraphicsContextQt.cpp that I didn't understand - like variables referenced that are clearly never defined.
Andreas Kling
Comment 4
2010-08-20 15:41:40 PDT
Created
attachment 65002
[details]
Proposed patch
Ariya Hidayat
Comment 5
2010-08-20 16:17:59 PDT
Comment on
attachment 65002
[details]
Proposed patch LGTM. re=me
Andreas Kling
Comment 6
2010-08-20 16:23:32 PDT
Comment on
attachment 65002
[details]
Proposed patch Clearing flags on attachment: 65002 Committed
r65761
: <
http://trac.webkit.org/changeset/65761
>
Andreas Kling
Comment 7
2010-08-20 16:23:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug