third_party/WebKit/WebCore/platform/graphics/qt/GraphicsLayerQt.h
@@ -21,6 +21,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef GraphicsLayerQt_h
 #define GraphicsLayerQt_h
 
+#if ENABLE(3D_CANVAS)
+#include "GraphicsContext3D.h"
+#endif
 #include "GraphicsLayer.h"
 #include "GraphicsLayerClient.h"
 
